Fix css class sidebar-sticky to work on firefox

--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -30,7 +30,8 @@ html, body{
 
 .sidebar-sticky {
     position: -webkit-sticky;
-    position: sticky;
+    position: absolute;
+    width: 100%;
     top: 70px; /* Height of navbar */
     height: calc(100vh - 70px);
     padding-top: 1rem;
